# qrchive

./: .gitignore  Agents.md  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  package.json  pyproject.toml
.github/workflows/: docker-image.yml  release.yml
scripts/: extract_release_notes.py  parse_junit.sh
src/: app.py  licenses.py  matter.csv  repositories.py  services.py
src/data/: manual_dependencies.json  matter_template.csv
src/static/css/: style.css
src/static/js/: matter.js  qrcode.js  utils.js
src/templates/: base.html  device_modal.html  licenses.html  matter.html  navbar.html  qr_modal.html  qrcode.html  whats_new_modal.html
tests/: conftest.py  test_app.py  test_common_reporter_logic.py  test_delete.py  test_github_repo_logic.py  test_import_export.py  test_licenses.py  test_matter_format.py  test_matter_table.py  test_qr_visibility.py  test_version_endpoint.py  test_version_logic.js  test_whats_new_logic.js
