[project]
name = "qrchive"
version = "0.10.0"
description = "QR code management"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.2",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[project.urls]
Repository = "https://github.com/dsheehan/qrchive"
